# Docasst

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/doc_asst/: __init__.py  cli.py
backend/app/doc_asst/agents/: __init__.py  extractor_summarizer_agent.py  planner_agent.py  reflection_agent.py  reporter_agent.py
backend/app/doc_asst/config/: __init__.py  env.py  settings.py
backend/app/doc_asst/core/: agent.py  contract.py  llm.py
backend/app/doc_asst/orchestrator/: __init__.py  graph.py  nodes.py  runner.py  state.py  tool_policy.py
backend/app/doc_asst/persistence/: __init__.py  checkpointer.py  pool.py  store.py
backend/app/doc_asst/rag/: README.md  ingest.py  ingest_cli.py
backend/app/doc_asst/skills/docasst-architecture-review/: SKILL.md
backend/app/doc_asst/skills/docasst-architecture-review/agents/: openai.yaml
backend/app/doc_asst/skills/docasst-architecture-review/references/: review-checklist.md
backend/app/doc_asst/tools/: __init__.py  base_tool.py  file_content_tool.py  memory_tool.py  rag_tool.py  registry.py  search_tool.py
backend/app/services/: __init__.py  chat.py  file.py
docker/: entrypoint.sh
docs/: README.md  architecture.md  roadmap.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
workspace/sources/: citation_policy.md  document_templates.md  fact_checking_guide.md  quality_review_standards.md  research_workflow.md  style_preferences.md  writing_guidelines.md
