[project]
name = "docasst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.0",
    "openai>=2.33.0",
    "psycopg[binary]>=3.3.3",
]

[project.scripts]
docasst = "backend.app.doc_asst.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend.app.doc_asst*"]

[tool.uv]
package = true
