[project]
name = "docasst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.0",
    "openai>=2.33.0",
    "pypdf>=5.9.0",
    "python-docx>=1.1.2",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.3.0",
    "langchain-openai>=1.2.1",
    "langchain-core>=1.3.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
docasst = "backend.app.doc_asst.cli:main"
docasst-ingest = "backend.app.doc_asst.rag.ingest_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend.app.doc_asst*"]

[tool.uv]
package = true
